--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,5 @@ services:
     ports:
       - "8085:80"
     volumes:
-      - .:/usr/share/nginx/html
+      - ./:/usr/share/nginx/html:ro
     restart: always
